--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
           <div class="container text-center">
             <h3>Skills</h3>
 
-              <!-- skill1 -->
+              <!-- skill1 link to project in excell-->
             <div class="row">
               
                <div class="col-12 col-md-1 columna">
@@ -158,10 +158,10 @@
 
             </div>
 
-              <!-- skill2 -->
+              <!-- skill2 link to project google sheets-->
             <div class="row">
               <div class="col-12 col-md-1 columna">
-                <a href="">
+                <a href="https://docs.google.com/spreadsheets/d/1BIOBxdyZHls4ZG-PmA1SL9GD4eJNhzodO7WGSFE1OuE/edit?usp=sharing">
                   <img class="img-skill" src="img/skills/excel-skills-eda.png">
                 </a>
               </div>
@@ -325,7 +325,7 @@
                   <!-- Proyecto # 3 -->
               <div class="col-12 ">
                 <p class="title-project">AirBnB NYC</p>
-                <a href=""> 
+                <a href="https://docs.google.com/spreadsheets/d/1BIOBxdyZHls4ZG-PmA1SL9GD4eJNhzodO7WGSFE1OuE/edit?usp=sharing"> 
                   <img class="img-project" src="img/projects/Google-sheets_link_to_AirBNYC_project.jpg">
                 </a>
                 <p class="paragraph-project">
@@ -333,7 +333,7 @@
                   preparation, analysis and visualization.
                 </p>
                 <p class="link-project">
-                  <a href="">Check it Out</a>
+                  <a href="https://docs.google.com/spreadsheets/d/1BIOBxdyZHls4ZG-PmA1SL9GD4eJNhzodO7WGSFE1OuE/edit?usp=sharing">Check it Out</a>
                 </p>
 
               </div>
