--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="css/mistyles.css">
 
         <!-- favicon -->
-        <link rel="icon" href="img/favicon/logo.png" type="img/x-icon">
+        <link rel="icon" href="img/favicon/favicon2.png" type="img/x-icon">
 
         <!-- titulo de la ventana -->
         <title>Edgar Fuentes. | Data Analyst.</title>
@@ -53,7 +53,7 @@
 
               <div class="collapse navbar-collapse" id="navbarToggler">
                   
-                  <a class="navbar-brand" href="#"> <img src="img/logo/LOGO_EF_rojo.png" width="50" alt="Logo of page web" class="rounded-circle"> </a>
+                  <a class="navbar-brand" href="#"> <img src="img/logo/LOGO_EF_rojon.png" width="50" alt="Logo of page web" class="rounded-circle"> </a>
                   
 
                   <ul class="navbar-nav d-flex justify-content-center align-items-center" >
