--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="row">
               
                <div class="col-12 col-md-1 columna">
-                <a href="https://docs.google.com/spreadsheets/d/1q_scI_Z-BwaLS7QqM33oXo123ZeXnbiFTMmcVesoud0/edit?usp=sharing">
+                <a href="https://docs.google.com/spreadsheets/d/1BIOBxdyZHls4ZG-PmA1SL9GD4eJNhzodO7WGSFE1OuE/edit?usp=sharing">
                   <img class="img-skill" src="img/skills/excel-skills.png" >
                 </a>
               </div>
@@ -161,7 +161,7 @@
               <!-- skill2 link to project google sheets-->
             <div class="row">
               <div class="col-12 col-md-1 columna">
-                <a href="https://docs.google.com/spreadsheets/d/1BIOBxdyZHls4ZG-PmA1SL9GD4eJNhzodO7WGSFE1OuE/edit?usp=sharing">
+                <a href="https://docs.google.com/spreadsheets/d/1q_scI_Z-BwaLS7QqM33oXo123ZeXnbiFTMmcVesoud0/edit?usp=sharing">
                   <img class="img-skill" src="img/skills/excel-skills-eda.png">
                 </a>
               </div>
@@ -307,7 +307,7 @@
                 <!-- Proyecto # 2 -->
               <div class="col-12 ">
                 <p class="title-project">Crimes Los Angeles City</p>
-                <a href=""> 
+                <a href="https://public.tableau.com/views/CRIME_DATA_FROM_2020_TO_present-update2/RptOfCrmHightSevByGeoLoc?:language=es-ES&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"> 
                   <img class="img-project" src="img/projects/tableau_link_to_crimes_data_LA.jpg">
                 </a>
                 <p class="paragraph-project">
@@ -316,7 +316,7 @@
                   in the tableau visualization tool.
                 </p>
                 <p class="link-project">
-                  <a href="">Check it Out</a>
+                  <a href="https://public.tableau.com/views/CRIME_DATA_FROM_2020_TO_present-completo-ene-17-2025alas1y40pm/ReportsOfCrimeInTime?:language=es-ES&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Check it Out</a>
                 </p>
 
               </div>
