--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <!-- seccion principal o hero -->
         <section class="hero align-items-stretch">
           <div class="hero-principal d-flex flex-column justify-content-center align-items-center">
-            <img class="hero-imagen-perfil" src="img/mifoto/EDGARPNGPF.png" alt="Picture of Edgar Fuentes.">
+            <img class="hero-imagen-perfil" src="img/mifoto/EDGARPNGPF2.png" alt="Picture of Edgar Fuentes.">
 
             <h1>Hi, I am Edgar Fuentes.</h1>
 
