--- a/index.html
+++ b/index.html
@@ -353,7 +353,7 @@
         <footer class="pie-de-pagina" id="pie">
           <div class="container text-center">
               &copy; 2023 Edgar Fuentes. Copyright. <br>
-              <a href="https://www.linkedin.com/in/eddataanalyst" target="_blank">LinkedIn</a> <br>
+              <a href="https://www.linkedin.com/in/linfedgarondataanalyst" target="_blank">LinkedIn</a> <br>
               <a href="mailto:myregistersonline@gmail.com">Email</a> <br>
               
           </div>
