--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
             <div class="row">
               
                <div class="col-12 col-md-1 columna">
-                <a href="https://docs.google.com/spreadsheets/d/1BIOBxdyZHls4ZG-PmA1SL9GD4eJNhzodO7WGSFE1OuE/edit?usp=sharing">
+                <a href="https://docs.google.com/spreadsheets/d/11v2DD8eXpqpRfH7jgCNhziT9vA78Yt4o/edit?usp=sharing&ouid=111590815924617377632&rtpof=true&sd=true">
                   <img class="img-skill" src="img/skills/excel-skills.png" >
                 </a>
               </div>
