--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <!-- skill4 -->
             <div class="row">
               <div class="col-12 col-md-1 columna">
-                <a href="https://public.tableau.com/views/CRIME_DATA_FROM_2020_TO_present-completo-ene-17-2025alas1y40pm/ReportsOfCrimePerAgeAndSex?:language=es-ES&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">
+                <a href="https://public.tableau.com/views/Crime_data_jul-28-2025-fullproject/SummaryOfCrimeAtLongTime?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">
                   <img class="img-skill" src="img/skills/tableau-skills.png">
                 </a>
               </div>
