--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
                 <!-- Proyecto # 2 -->
               <div class="col-12 ">
                 <p class="title-project">Crimes Los Angeles City</p>
-                <a href="https://public.tableau.com/views/Crime_data_jul-28-2025-fullproject/SummaryOfCrimeAtLongTime?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link"> 
+                <a href="https://public.tableau.com/shared/Y2W8DSB69?:display_count=n&:origin=viz_share_link"> 
                   <img class="img-project" src="img/projects/tableau_link_to_crimes_data_LA.jpg">
                     
                 
@@ -318,7 +318,7 @@
                   in the tableau visualization tool.
                 </p>
                 <p class="link-project">
-                  <a href="https://public.tableau.com/views/Crime_data_jul-28-2025-fullproject/SummaryOfCrimeAtLongTime?:language=en-US&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">Check it Out</a>
+                  <a href="https://public.tableau.com/shared/Y2W8DSB69?:display_count=n&:origin=viz_share_link">Check it Out</a>
                 </p>
 
               </div>
