--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
             <!-- skill4 -->
             <div class="row">
               <div class="col-12 col-md-1 columna">
-                <a href="https://public.tableau.com/shared/Y2W8DSB69?:display_count=n&:origin=viz_share_link">
+                <a href="https://public.tableau.com/views/crunchbaseuupdate/StoryOfParticipantsAndRaisedPerRegionsForSerieA?:language=es-ES&:sid=&:redirect=auth&:display_count=n&:origin=viz_share_link">
                   <img class="img-skill" src="img/skills/tableau-skills.png">
                 </a>
               </div>
@@ -368,3 +368,4 @@
         <script src="js/bootstrap.bundle.min.js"></script>
     </body>
 </html>
+
